# datamol

./: .authors.yml  .deepsource.toml  .gitignore  .mailmap  404.html  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CNAME  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  codecov.yml  contribute.html  env.yml  index.html  license.html  mkdocs.yml  pixi.toml  pyproject.toml  rever.xsh  setup.py  sitemap.xml  usage.html  versions.json
.devcontainer/: Dockerfile  bashrc  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  patch_conda_env.py
.github/workflows/: code-check.yml  codeql-analysis.yml  doc.yml  install-test-release.yml  (+4 more)
0.1.1/: contribute.html  license.html  usage.html
0.1.6/: 404.html  license.html
0.1.9/: index.html
0.10.3/: contribute.html  sitemap.xml
0.11.1/: 404.html
0.11.2/: contribute.html  license.html
0.11.3/: index.html  license.html  usage.html
0.11.4/: index.html  usage.html
0.11.5/: 404.html  license.html
0.12.2/: index.html
0.12.3/: 404.html  usage.html
0.12.4/: 404.html  usage.html
0.2.0/: 404.html  index.html  license.html  sitemap.xml  usage.html
0.2.2/: contribute.html  index.html  license.html
0.2.8/: 404.html  index.html  license.html  sitemap.xml  usage.html
0.3.3/: license.html
0.3.4/: 404.html  contribute.html  index.html
0.3.5/: CNAME  sitemap.xml
0.3.7/: contribute.html  sitemap.xml
0.3.8/: contribute.html  license.html  usage.html
0.4.0/: 404.html  license.html
0.4.10/: 404.html  contribute.html  license.html  usage.html
0.4.11/: contribute.html  sitemap.xml  usage.html
0.4.3/: contribute.html  usage.html
0.4.4/: 404.html
0.4.5/: index.html  sitemap.xml
0.4.6/: contribute.html  index.html
0.4.8/: license.html
0.4.9/: 404.html  contribute.html  index.html  license.html  usage.html
0.5.0/: contribute.html  index.html  license.html
0.6.0/: license.html  objects.inv
0.6.1/: index.html
0.6.2/: 404.html
0.6.3/: contribute.html
0.6.5/: usage.html
0.6.7/: contribute.html  license.html  sitemap.xml  usage.html
0.6.8/: index.html  sitemap.xml
0.6.9/: 404.html  contribute.html  license.html  sitemap.xml
0.7.0/: 404.html
0.7.1/: index.html  license.html  objects.inv  sitemap.xml  usage.html
0.7.11/: contribute.html  license.html
0.7.14/: 404.html  license.html  sitemap.xml
0.7.15/: contribute.html  index.html
0.7.16/: objects.inv  sitemap.xml
0.7.18/: sitemap.xml
0.7.2/: 404.html  index.html  license.html
0.7.3/: 404.html  contribute.html
0.7.4/: contribute.html  index.html  objects.inv  sitemap.xml  usage.html
0.7.5/: contribute.html  license.html
0.7.7/: license.html  objects.inv  sitemap.xml  usage.html
0.7.8/: 404.html  index.html  objects.inv  sitemap.xml
0.7.9/: 404.html  contribute.html  sitemap.xml  usage.html
0.8.1/: objects.inv  usage.html
0.8.3/: 404.html  sitemap.xml
0.8.4/: license.html  sitemap.xml
0.8.5/: 404.html  contribute.html  index.html
0.8.8/: contribute.html  objects.inv
0.9.0/: 404.html  contribute.html  license.html  sitemap.xml  usage.html
0.9.1/: 404.html  sitemap.xml
0.9.2/: 404.html  index.html  license.html  usage.html
0.9.3/: license.html
0.9.4/: 404.html  index.html  objects.inv
api/: datamol.actions.html  datamol.conformers.html  datamol.fragment.html  datamol.html  datamol.reactions.html  datamol.scaffold.html  datamol.utils.html  datamol.viz.html
binder/: environment.yml
datamol/: __init__.py  _mkdocs.py  _mkdocs_introspector.py  _sanifix4.py  _version.py  align.py  cluster.py  conformers.py  convert.py  data.py  descriptors.py  fp.py  graph.py  io.py  log.py  match.py  match_graphs.py  mcs.py  mol.py  molar.py  similarity.py  types.py  viz.py
docs/: CNAME  contribute.md  index.md  installation.md  license.md  usage.md
examples/: Cluster_Molecules.html  Fragment_and_Scaffold.html  Preprocessing_Molecules.html  The_Basics.html
images/: generate-png.sh
latest/: 404.html  contribute.html  index.html  license.html  usage.html
main/: 404.html  contribute.html  index.html  license.html  objects.inv  sitemap.xml  usage.html
master/: 404.html  contribute.html  index.html  license.html  sitemap.xml  usage.html
news/: TEMPLATE copy.rst  align-support-rdkit-versions-wo-allowRGroups~  align.rst  batch-size.rst  batch.rst  bug_conf_gen_with_equal_energies.rst  cdist.rst  conf_hs.rst  conformer_default.rst  conformer_params.rst  copydir.rst  coverage.rst  current.rst  dep.rst  dev.rst  devcontainer.rst  diversity.rst  doc.rst  docs-search.rst  docs_style.rst  ecfp_fix.rst  esol.rst  fast_to_df.rst  fcfp_func.rst  feat-use-docs-subdomain-instead-of-doc.rst  fileIO.rst  first.rst  fix-sanifix-logging.rst  fix-sim.rst  fix_fs_glob.rst  fix_minor_tuto_typos.rst  fixes-134-135.rst  foc.rst  forcefield.rst  fs.rst  ga.rst  gh_refactor.rst  graph_matching_and_reordering.rst  import-time.rst  inchi.rst  (+44 more)
notebooks/: 1_The_Basics.ipynb  2_Preprocessing_Molecules.ipynb  4_Fragment_Molecules.ipynb  4_Fragment_and_Scaffold.ipynb  Get_ChEMBL_Approved_Drugs.ipynb  dev.ipynb
scripts/: datamol_duration.py
search/: search_index.json
stable/: 404.html  contribute.html  index.html  license.html  objects.inv  sitemap.xml  usage.html
tests/: .test_filter.py.swp  conftest.py  test_actions.py  test_align.py  test_assemble.py  test_cluster.py  test_conformers.py  test_convert.py  test_data.py  test_datamol_import_time.py  test_descriptors.py  test_file_save_load.py  test_filter.py  test_fp.py  test_fragment.py  test_graph.py  test_import.py  test_io.py  test_isomers.py  test_jobs.py  test_lasso_highlight.py  test_log.py  test_mcs.py  test_mol.py  test_mol.py.py  test_molar.py  test_notebooks.py  test_predictors.py  test_reactions.py  test_scaffold.py  test_similarity.py  test_utils_fs.py  test_utils_jobs.py  test_utils_parallel.py  test_utils_paths.py  test_utils_perf.py  test_viz.py  test_viz_lasso_highlight.py  test_viz_substrcture.py  test_viz_utils.py
tutorials/: Cluster_Molecules.html  Fragment_and_Scaffold.html  Preprocessing_Molecules.html  The_Basics.html
(+1156 files in other folders)
